Rename to Lyrico; ANALYTICS: how to view a specific user (Client ID, User exploration)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lyrics Puzzle - Fill in the Lyrics!</title>
+    <title>Lyrico - Fill in the Lyrics!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <span id="preloadArtistCounter" class="preload-counter" style="display: none;" title="Preloaded songs by current artist">Artist: <strong id="preloadArtistCount">0</strong> / 5</span>
         </div>
         <header>
-            <h1>🎵 Lyrics Puzzle</h1>
+            <h1>🎵 Lyrico</h1>
             <p class="subtitle">Type words to reveal lyrics as you play! Match words as you type and fill in the blanks to complete the song lyrics.</p>
         </header>
 
