Hide Spotify from lobby; 3-col layout; error closer; secret code spotspot unlocks Spotify

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </header>
 
         <div class="game-setup" id="gameSetup">
+            <div class="game-setup-main">
             <div class="game-modes">
                 <div class="game-mode-card">
                     <div class="mode-icon">🎯</div>
@@ -72,6 +73,7 @@
                 </div>
             </div>
             <div id="errorMessage" class="error-message"></div>
+            </div>
             <div id="failedSongs" class="failed-songs" style="display: none;">
                 <h4>Failed Songs (for testing):</h4>
                 <div id="failedSongsList"></div>
